# BlogApp_FullStack-Django-Vue

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/article/: models.py  urls.py  views.py
backend/article/migrations/: 0001_initial.py  0002_rename_totalcomments_articles_totalcomments.py  0003_comment_like.py  0004_remove_articles_created_at.py  0005_articles_categoryname.py
backend/category/: models.py
backend/category/migrations/: 0001_initial.py  0002_articlecategory_interest.py
backend/core/: settings.py  urls.py
backend/customUser/: models.py  urls.py  views.py
backend/customUser/migrations/: 0001_initial.py  0002_accesstoken.py  0003_users_gender_alter_accesstoken_jti.py  0004_rename_name_users_fname.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  Dashboard.vue  PageLayout.vue  main.js
frontend/src/components/: AddArticle.vue  EditUser.vue  Header.vue  LoginSignUp.vue  ProfilePic.vue  Sidebar.vue  ViewDetail.vue
frontend/src/components/modals/: EditUser.vue
frontend/src/pages/: Body.vue  LoginSignUp.vue  ProfilePage.vue
frontend/src/router/: router.js
frontend/src/state/: state.js
frontend/src/store/: store.js
